--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ version: "3"
 services:
   nginx:
     image: nginx:1.23.3
+    restart: always
     # монтируем директорию nginx и сертификат с ключом
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
