editnginx.conf: add locations

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,5 +33,14 @@ http {
                 location / {
                         proxy_pass http://172.17.0.1:3000;
                 }
+                location /vpn {
+                        proxy_pass http://172.17.0.1:10086;
+                }
+                location /vpn-docker {
+                        proxy_pass http://172.17.0.1:51821;
+                }
+                location /mongo-express {
+                        proxy_pass http://172.17.0.1:8081;
+                }
         }
 }
